# C_GestioneClasse

./: .gitignore  CMakeLists.txt  gcc.bat  gcc.sh  header.h  main.c
.github/workflows/: build-docs.yml
C_GestioneClasse/Writerside/: writerside.cfg
C_GestioneClasse/exportToHTML/: .gitignore.html  .gitignore.html.html  API-quickstart.md.html  API-quickstart.md.html.html  API-reference.md.html  API-reference.md.html.html  C_GestioneClasse.iml.html  C_GestioneClasse.iml.html.html  Changes.md.html  Changes.md.html.html  Create-user.md.html  Create-user.md.html.html  Creates-list-of-users-with-given-input-array.md.html  Creates-list-of-users-with-given-input-array.md.html.html  Delete-purchase-order-by-ID.md.html  Delete-purchase-order-by-ID.md.html.html  Delete-user.md.html  Delete-user.md.html.html  Find-purchase-order-by-ID.md.html  Find-purchase-order-by-ID.md.html.html  Get-user-by-user-name.md.html  Get-user-by-user-name.md.html.html  Logs-out-current-logged-in-user-session.md.html  Logs-out-current-logged-in-user-session.md.html.html  Logs-user-into-the-system.md.html  Logs-user-into-the-system.md.html.html  Pet.md.html  Pet.md.html.html  Place-an-order-for-a-pet.md.html  Place-an-order-for-a-pet.md.html.html  Returns-pet-inventories-by-status.md.html  Returns-pet-inventories-by-status.md.html.html  Update-user.md.html  Update-user.md.html.html  adoc.tree.html  adoc.tree.html.html  api-docs.md.html  api-docs.md.html.html  buildprofiles.xml.html  buildprofiles.xml.html.html  (+25 more)
Writerside/: in.tree  writerside.cfg
Writerside/code/: main.c
src/: header.h  main.c
(+20 files in other folders)
